import "Events/DiadocMessage-PostApi.proto";

package Diadoc.Api.Proto.Documents;

option java_outer_classname = "DetectTitleResponseProtos";

message DetectTitleResponse {
	repeated DetectedDocumentTitle DocumentTitles = 1;
}

message DetectedDocumentTitle {
	required string TypeNamedId = 1;
	required string Function = 2;
	required string Version = 3;
	required int32 TitleIndex = 4;
	repeated Events.MetadataItem Metadata = 5;
}